--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "type": "module",
   "scripts": {
     "start": "node ./app.js",
-    "dev": "nodemon ./app.js"
+    "dev": "nodemon ./app.js",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watch"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -11,9 +13,11 @@
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "gravatar": "^1.8.2",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "nanoid": "^5.1.6",
     "pg": "^8.16.3",
     "sequelize": "^6.37.7",
